# Eindopdracht_prac2

./: README.md  pyproject.toml
Data/: dafdafafda_1.csv
src/eindopdracht/: GUI.py  GUI.ui  controller.py  model.py  view.py
