[tool.poetry]
name = "eindopdracht"
version = "0.1.0"
description = ""
authors = ["JBaranes5 <118254613+JBaranes5@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pyside6 = "^6.4.1"
numpy = "^1.23.5"
pyqtgraph = "^0.13.1"
pyvisa = "^1.12.0"
matplotlib = "^3.6.2"
pyvisa-py = "^0.5.3"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zonnecel_automatisering = "eindopdracht.view:main"